  individual feed sections. See the sample configuration or the User's
  Guide for details.

- Added "SaveAsEncoding" configuration parameter to individual feed
  sections. Allows specification of encoding for output file. Encoding can
  later be used via the ForceEncoding parameter for an instance of curn
  that reads a saved file. See the sample configuration or the User's Guide
  for details.

- Curn now gives email attachments names with reasonable extensions.
  Previously, default names (ending in ".tmp") were used, which gave some 
  mail clients (e.g., some versions of Outlook) fits.


Version 1.5.4 (20 October, 2004)

- In the org.clapper.util API, org.clapper.util.misc.Logger is now in the
  org.clapper.util.logging package and is now uses the java.util.logging
  API directly, instead of using Jakarta Commons Logging. This eliminates
  another third-party library dependency, but required modifications
  various "import" statement in curn classes.


Version 1.5.3 (16 October, 2004)

- curn now sets an appropriate "User-Agent" HTTP header on HTTP requests,
  instead of defaulting to whatever the Java VM uses.

- An exception thrown while processing a feed now contains the feed URL
  in its exception message. This is especially useful for emailed log
  exceptions.

- Where possible, exception messages are now stored in properties files and
  accessed via ResourceBundle objects, allowing for localization.


Version 1.5.2 (12 October, 2004)

- Simplified loading of API version, in build.xml. Instead of loading
  version from Version.class, it now loads the version from a properties
  file. The Version class uses the same properties file, as a resource
  bundle.


Version 1.5.1 (10 October, 2004)

- Fixed bug with PreparseEdit per-feed configuration directive (introduced
  in version 1.5). Multiple edit commands would cause duplication of lines
  in feeds XML file.

- If there are no output handlers defined, feeds are not run through the